Fixed attribution errors